force-app/main/default/objects/FieloEE__PublicSettings__c/FieloEE__PublicSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Public Settings</label>
</CustomObject>