force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloCH__RewardDeliveryClass__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RewardDeliveryClass__c</fullName>
    <label>Reward Delivery Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>