force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__ActiveContactsCalculation__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ActiveContactsCalculation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optimized Member Query</label>
    <type>Checkbox</type>
</CustomField>