force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__ChallengesPrefix__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ChallengesPrefix__c</fullName>
    <label>Challenges Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>