force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__CustomPage__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CustomPage__c</fullName>
    <label>Custom Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>