force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__CustomPagePreview__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CustomPagePreview__c</fullName>
    <label>Custom Preview Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>