force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__EditorToolbar__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__EditorToolbar__c</fullName>
    <label>Editor Toolbar</label>
    <type>TextArea</type>
</CustomField>