force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__ExcludeBannerFields__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExcludeBannerFields__c</fullName>
    <defaultValue>&#39;FieloEE__OverlayText__c&#39;</defaultValue>
    <label>Exclude Banner Fields</label>
    <type>TextArea</type>
</CustomField>