force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__Facebook__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Facebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimized Component Query</label>
    <type>Checkbox</type>
</CustomField>