force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__FieloVersion__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieloVersion__c</fullName>
    <label>Fielo Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>