force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__Google__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Google__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimized Program Query</label>
    <type>Checkbox</type>
</CustomField>