force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__ImageObject__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ImageObject__c</fullName>
    <description>API name of the object to save Images using the "Photo Upload" component (for example "Attachment" or "Document").</description>
    <inlineHelpText>API name of the object to save Images using the "Photo Upload" component (for example "Attachment" or "Document").</inlineHelpText>
    <label>Image Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>