force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__MemberCodeClass__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCodeClass__c</fullName>
    <label>zz_deprecated_Member Code Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>