force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__MenuLanguages__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MenuLanguages__c</fullName>
    <description>Query to show the languages of a Menu</description>
    <label>Menu Languages</label>
    <type>TextArea</type>
</CustomField>