force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__MenuMemberFilter__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MenuMemberFilter__c</fullName>
    <label>Menu Member Filter Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>