force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__NewsView__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NewsView__c</fullName>
    <inlineHelpText>This field contains the Id of the Organization-Wide Email Address from where you want to set the sender display name and sender email.</inlineHelpText>
    <label>Google Analytics code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>