force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__RewardView__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardView__c</fullName>
    <label>Organization-Wide Email Address Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>