force-app/main/default/objects/FieloEE__PublicSettings__c/fields/FieloEE__ShowVoucherCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ShowVoucherCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable email for new user</label>
    <type>Checkbox</type>
</CustomField>